# Shore-Assistant

./: .gitignore  CLAUDE.md  core_system.md  docker-compose.n8n.yml  package-lock.json  package.json
.ipynb_checkpoints/: README-checkpoint.md
back-end/: .env.example  .gitignore  Makefile  Modelfile.gemma4  README.md  requirements-dev.txt  requirements.txt
back-end/app/: main.py
back-end/config/: services.example.yaml
back-end/data/: terminal_whitelist.json
back-end/scripts/: backfill_profile_from_audit.py  bench_memory.py
back-end/tests/: conftest.py  manual.md  manual_screenparse_smoke.md  smoke_json_schema_image.py  test_agent_service.py  test_agent_service_memory.py  test_background_service.py  test_chat_ws_computer_use.py  test_chat_ws_concurrent.py  test_chat_ws_copilot.py  test_chat_ws_cua.py  test_chat_ws_history.py  test_chat_ws_images.py  test_chat_ws_memory_bundle.py  test_chat_ws_screen_access.py  test_cloud_llm_service.py  test_cloud_tools.py  test_computer_use_tool.py  test_dashboard_ai_components.py  test_embedding_service.py  test_health_memory.py  test_image_store.py  test_llm_service.py  test_llm_system_prompt_memory.py  test_memory_api.py  test_memory_debug.py  test_memory_service.py  test_node_pty_client.py  test_runtime_flags.py  test_services_api.py  test_stt_runtime_gate.py  test_terminal_service.py  test_terminal_tools.py  test_terminal_whitelist.py  test_tool_retriever_computer_use.py  test_tts_runtime_gate.py  test_ws.py
back-end/voices/: Shorekeeper.txt
deploy/memory/: .env.example  README.md  docker-compose.yml
desktop/: README.md
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  hud.json
desktop/src-tauri/src/: hud.rs  input.rs  lib.rs  main.rs
docs/: fish_speech_guide.md
docs/chronicles/: v0.1.0.md
front-end/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
front-end/src/: App.tsx  index.css
shore-ai-service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
shore-ai-service/proto/shore/ai/v1/: embed.proto  health.proto  screenparse.proto  stt.proto  tts.proto
shore-ai-service/src/shore_ai/: auth.py  omniparser_adapter.py  server.py
shore-ai-service/src/shore_ai/handlers/: embed.py  health.py  screenparse.py  stt.py  tts.py
shore-ai-service/tests/: test_bearer_interceptor.py  test_embed_handler.py  test_health_handler.py  test_omniparser_adapter.py  test_screenparse_handler.py  test_stt_handler.py  test_tts_handler.py
shore-ai-supervisor/: .gitignore  Makefile  README.md  pyproject.toml
shore-ai-supervisor/proto/shore/supervisor/v1/: supervisor.proto
shore-ai-supervisor/src/shore_supervisor/: handler.py  server.py
shore-ai-supervisor/tests/: test_handler.py
shore-pty-service/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
shore-pty-service/src/: index.ts  (+8 more)
(+286 files in other folders)
