[project]
name = "shore-ai"
version = "0.1.0"
description = "Shore AI microservice: STT + TTS + Embedding over gRPC"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.66.0",
  "grpcio-tools>=1.66.0",
  "protobuf>=5.27.0",
  "numpy>=1.24.0",
  "torch>=2.8.0",
  "transformers @ git+https://github.com/huggingface/transformers.git",
  "sentence-transformers>=3.0.0",
  "kokoro>=0.9.0",
  "soundfile>=0.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
