[project]
name = "shore-ai"
version = "0.1.0"
description = "Shore AI microservice: STT + TTS + Embedding over gRPC"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.66.0",
  "grpcio-tools>=1.66.0",
  "protobuf>=5.27.0",
  "numpy>=1.24.0",
  "torch>=2.8.0",
  "transformers @ git+https://github.com/huggingface/transformers.git",
  "sentence-transformers>=3.0.0",
  "kokoro>=0.9.0",
  "soundfile>=0.13.0",
  "ultralytics>=8.3.0",
  "supervision>=0.22.0",
  "opencv-python-headless>=4.9.0",
  "easyocr>=1.7.0",
  "einops>=0.8.0",
  "timm>=1.0.0",
  "huggingface_hub>=0.25.0",
  "Pillow>=10.0.0",
  "openai",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
