[package]
name = "shore-assistant"
version = "0.1.0"
description = "Shore Assistant desktop client — a thin Tauri webview shell around the existing React frontend, talking to the production backend over the internet."
edition = "2021"
rust-version = "1.77.2"

[lib]
# The library name; `main.rs` calls `shore_assistant_lib::run()`.
name = "shore_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
